[gd_scene load_steps=2 format=3 uid="uid://dual4o5whtk85"]

[ext_resource type="Script" path="res://src/ui_components/info/info.gd" id="1_c8o2q"]

[node name="Info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8o2q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "INFO"
horizontal_alignment = 1

[node name="GenerationSeed" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="GenerationSeedLabel" type="Label" parent="VBoxContainer/GenerationSeed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "SEED"

[node name="GenerationSeed" type="LineEdit" parent="VBoxContainer/GenerationSeed"]
layout_mode = 2
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
text = "palpalpalpa"
editable = false
expand_to_text_length = true
flat = true

[node name="CopySeed" type="Button" parent="VBoxContainer/GenerationSeed"]
layout_mode = 2
text = "COPY"

[node name="StartDate" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="StartDateLabel" type="Label" parent="VBoxContainer/StartDate"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "START_DATE"

[node name="StartDate" type="Label" parent="VBoxContainer/StartDate"]
layout_mode = 2
text = "24.06.2024"

[connection signal="pressed" from="VBoxContainer/GenerationSeed/CopySeed" to="." method="_on_copy_seed_pressed"]
